pong/build/meson-logs/meson-log.txt
Build started at 2025-02-20T22:24:06.686769
Main binary: /usr/bin/python
Build Options: 
Python system: Linux
The Meson build system
Version: 1.7.0
Source dir: /home/wallace/repos/opengl-adventures/pong
Build dir: /home/wallace/repos/opengl-adventures/pong/build
Build type: native build
Project name: pong
Project version: undefined
C compiler for the host machine: cc (gcc 14.2.1 "cc (GCC) 14.2.1 20250207")
C linker for the host machine: cc ld.bfd 2.44
-----------
Detecting archiver via: `gcc-ar --version` -> 0
stdout:
GNU ar (GNU Binutils) 2.44
Copyright (C) 2025 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.
-----------
C++ compiler for the host machine: c++ (gcc 14.2.1 "c++ (GCC) 14.2.1 20250207")
C++ linker for the host machine: c++ ld.bfd 2.44
C compiler for the build machine: cc (gcc 14.2.1 "cc (GCC) 14.2.1 20250207")
C linker for the build machine: cc ld.bfd 2.44
-----------
Detecting archiver via: `gcc-ar --version` -> 0
stdout:
GNU ar (GNU Binutils) 2.44
Copyright (C) 2025 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.
-----------
C++ compiler for the build machine: c++ (gcc 14.2.1 "c++ (GCC) 14.2.1 20250207")
C++ linker for the build machine: c++ ld.bfd 2.44
Build machine cpu family: x86_64
Build machine cpu: x86_64
Host machine cpu family: x86_64
Host machine cpu: x86_64
Target machine cpu family: x86_64
Target machine cpu: x86_64
Dependency glfw3 found: YES 3.4.0 (cached)
Dependency gl found: YES 1.2 (cached)
Dependency x11 found: YES 1.8.11 (cached)
Dependency xi found: YES 1.8.2 (cached)
Dependency dl found: YES unknown (cached)
Dependency threads found: YES unknown (cached)
Dependency xrandr found: YES 1.5.4 (cached)
Build targets in project: 1

Found ninja-1.12.1 at /usr/bin/ninja
Running compile:
Working directory:  /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmpxa6295th
Code:

        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
-----------
Command line: `c++ /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmpxa6295th/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive` -> 0
Running compile:
Working directory:  /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmp7vgl_z5o
Code:

        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
-----------
Command line: `c++ /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmp7vgl_z5o/testfile.cpp -o /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmp7vgl_z5o/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive` -> 1
stderr:
/home/wallace/repos/opengl-adventures/pong/build/meson-private/tmp7vgl_z5o/testfile.cpp: In function 'int main()':
/home/wallace/repos/opengl-adventures/pong/build/meson-private/tmp7vgl_z5o/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~
-----------
Running compile:
Working directory:  /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmp2k2xkej8
Code:

        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
-----------
Command line: `c++ /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmp2k2xkej8/testfile.cpp -o /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmp2k2xkej8/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive` -> 1
stderr:
/home/wallace/repos/opengl-adventures/pong/build/meson-private/tmp2k2xkej8/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~
-----------
Running compile:
Working directory:  /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmpmawvu_ya
Code:

-----------
Command line: `cc /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmpmawvu_ya/testfile.c -o /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmpmawvu_ya/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 --print-search-dirs` -> 0
stdout:
install: /usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/
programs: =/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../x86_64-pc-linux-gnu/bin/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../x86_64-pc-linux-gnu/bin/
libraries: =/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../x86_64-pc-linux-gnu/lib/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../x86_64-pc-linux-gnu/lib/../lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../lib/:/lib/x86_64-pc-linux-gnu/14.2.1/:/lib/../lib/:/usr/lib/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/../lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../x86_64-pc-linux-gnu/lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../:/lib/:/usr/lib/
-----------
Running compile:
Working directory:  /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmpr_gy_flz
Code:

-----------
Command line: `c++ /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmpr_gy_flz/testfile.cpp -o /home/wallace/repos/opengl-adventures/pong/build/meson-private/tmpr_gy_flz/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive --print-search-dirs` -> 0
stdout:
install: /usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/
programs: =/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../x86_64-pc-linux-gnu/bin/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../x86_64-pc-linux-gnu/bin/
libraries: =/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../x86_64-pc-linux-gnu/lib/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../x86_64-pc-linux-gnu/lib/../lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../x86_64-pc-linux-gnu/14.2.1/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../lib/:/lib/x86_64-pc-linux-gnu/14.2.1/:/lib/../lib/:/usr/lib/x86_64-pc-linux-gnu/14.2.1/:/usr/lib/../lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../x86_64-pc-linux-gnu/lib/:/usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../:/lib/:/usr/lib/
-----------
